--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "path-to-regexp": "2.4.0",
     "scss": "^0.2.4",
     "vue": "2.6.10",
-    "vue-router": "3.0.6",
+    "vue-router": "^3.5.2",
     "vuex": "3.1.0"
   },
   "devDependencies": {
